[gd_scene load_steps=2 format=3 uid="uid://rps_minigame"]

[ext_resource type="Script" path="res://scripts/battle/rps_minigame.gd" id="1_script"]

[node name="RPSMinigame" type="CanvasLayer"]
layer = 90
script = ExtResource("1_script")

[node name="BlurOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "ROCK PAPER SCISSORS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 80.0
offset_right = 50.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 40
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 130.0
offset_right = 200.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Choose your weapon!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoicesContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.0
offset_top = 180.0
offset_right = 220.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_constants/separation = 40
alignment = 1

[node name="RockButton" type="TextureButton" parent="Panel/ChoicesContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="ScissorsButton" type="TextureButton" parent="Panel/ChoicesContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="PaperButton" type="TextureButton" parent="Panel/ChoicesContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="ResultContainer" type="HBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 160.0
offset_right = 250.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayerChoice" type="TextureRect" parent="Panel/ResultContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VSLabel" type="Label" parent="Panel/ResultContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 36
text = "VS"
vertical_alignment = 1

[node name="EnemyChoice" type="TextureRect" parent="Panel/ResultContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ResultLabel" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 350.0
offset_right = 200.0
offset_bottom = 400.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 1, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 28
text = "YOU GO FIRST!"
horizontal_alignment = 1
vertical_alignment = 1
